# rex

./: .gitignore  README.md
Failed Attempts/Test/: a  b  client.c  server.c
Failed Attempts/src/CommandsManager/: commandsManager.c
Failed Attempts/src/MyTime/: MyTime.c
Failed Attempts/src/NetworkItems/: job.c  job.h
Failed Attempts/src/rex/: rex.c
code/build2/: CMakeLists.txt
code/src/: CommandsManager.c  CommandsManager.h  MyTime.h  Network.c  Network.h  StringManipulator.c  StringManipulator.h  job.c  job.h  rex.c  rexd.c
code/src/CommandsManager/: .commandsManager.c.swp  commandsManager.c  commandsManager.h
code/src/NetworkItems/: job.c  job.h  networkOptions.h
code/src/StringManipulator/: StringManipulator.c  StringManipulator.h
code/src/rex/: rex.c
code/src/rexd/: rexd.c
code/src2/: CommandsManager.c  CommandsManager.h  Helper.c  Helper.h  MyTime.c  MyTime.h  Network.c  Network.h  StringManipulator.c  StringManipulator.h  job.c  job.h  rex.c  rexd.c
